[project]
name = "port scanner"
version = "0.1.0"
description = "Port scanner using multithreading"
authors = [
    {name = "Rajchal",email = "rajchalanjal1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
